<resources>
    <string name="app_name">BrewExpert</string>

    // First page
    <string name="hello_message">Hello world!</string>
    <string name="welcome_messaage">Welcome to the BrewExpert! \n This app suggests you a special
        recipe for a beer, based on an analysis of your personal taste. \n Bring the
        brewing of beers to the next level!</string>
    <string name="signUp_message">Not registered? Sign up clicking here!</string>

    // Buttons
    <string name="signUp2_message">Sign up</string>
    <string name="singIn_message">Login</string>

    // Titles
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user_area">UserAreaActivity</string>
    <string name="userArea_message">Welcome to your personal page.</string>

    // TextView
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>

    // SignUp page
    <string name="enter_name">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_repeated_password">Repeat password</string>
    <string name="enter_age">Enter your age</string>
    <string name="enter_gender">Select your gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="gender_text">Gender</string>


</resources>
