<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="rug.beerexpert.Welcome"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="87dp"
        android:layout_marginTop="36dp"
        android:text="@string/hello_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="286dp"
        android:layout_height="232dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_messaage"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bSignIn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bSignIn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:background="@color/colorSecondary"
        android:elevation="0dp"
        android:text="@string/singIn_message"
        app:layout_constraintBottom_toTopOf="@+id/bSignUp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="68dp"
        android:text="@string/signUp_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/signUp_message" />
</android.support.constraint.ConstraintLayout>
