<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rug.beerexpert.UserAreaActivity"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/userArea_message"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="36dp"
        android:text="Username:"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etUsername"
        android:layout_alignStart="@+id/etUsername"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="35dp"
        android:text="age"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etUsername"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignRight="@+id/etUsername"
        android:layout_alignStart="@+id/textView14"
        android:layout_below="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAge"
        android:layout_alignStart="@+id/etAge"
        android:layout_below="@+id/etAge"
        android:layout_marginTop="54dp"
        android:text="@string/gender_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/etGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etAge"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignRight="@+id/etAge"
        android:layout_alignStart="@+id/textView16"
        android:layout_below="@+id/textView16" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etGender"
        android:layout_alignStart="@+id/etGender"
        android:layout_below="@+id/etGender"
        android:layout_marginTop="41dp"
        android:text="@string/password_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etGender"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/etGender"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3" />

</RelativeLayout>
